tests/snapshots/code_text_fallback_param__code_text_fallback_sample_go_stdout.snap
---
source: tests/code_text_fallback_param.rs
assertion_line: 142
expression: out_default
---
 1: package main
 2: 
 3: import "fmt"
28:     value := compute(10)
29:     fmt.Println("value:", value)
30: }
31:
