tests/snapshots/code_text_fallback_param__code_text_fallback_sample_js_combined.snap
---
source: tests/code_text_fallback_param.rs
expression: snap
---
STDOUT:
 1: function greet(name) {
 2:   console.log(`Hello, ${name}`);
 3: }
 4: 
27: 
28: main();
29: 

DEBUG (normalized):
{
  "budgets_effective": {
    "bytes": 120,
    "chars": null,
    "lines": null
  },
  "counts": {
    "included": 0,
    "omitted_children": 5,
    "total_nodes": 0
  },
  "output_stats": {
    "bytes": 97,
    "chars": 0,
    "lines": 8
  },
  "renderer": {
    "array_sampler": "default",
    "prefer_tail_arrays": false,
    "style": "default",
    "template": "code"
  },
  "root": {
    "children": [
      {
        "children": [
          {
            "atomic_token": "function greet(name) {",
            "id": 0,
            "index_in_parent_array": 0,
            "kind": "string",
            "metrics": {}
          },
          {
            "children": [
              {
                "atomic_token": "  console.log(`Hello, ${name}`);",
                "id": 0,
                "index_in_parent_array": 1,
                "kind": "string",
                "metrics": {}
              }
            ],
            "id": 0,
            "index_in_parent_array": 1,
            "kind": "array",
            "metrics": {
              "array_len": 1
            },
            "omitted_before": 1
          }
        ],
        "id": 0,
        "index_in_parent_array": 0,
        "kind": "array",
        "metrics": {
          "array_len": 2
        }
      },
      {
        "children": [
          {
            "atomic_token": "}",
            "id": 0,
            "index_in_parent_array": 2,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 1,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 2
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 3,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 2,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 3
      },
      {
        "id": 0,
        "index_in_parent_array": 3,
        "kind": "array",
        "metrics": {
          "array_len": 5
        }
      },
      {
        "id": 0,
        "index_in_parent_array": 9,
        "kind": "array",
        "metrics": {
          "array_len": 1
        }
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 26,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 10,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 26
      },
      {
        "children": [
          {
            "atomic_token": "main();",
            "id": 0,
            "index_in_parent_array": 27,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 11,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 27
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 28,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 12,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 28
      }
    ],
    "gaps": [
      {
        "before_child_index": 4,
        "omitted_count": 5
      }
    ],
    "id": 0,
    "kind": "array",
    "metrics": {
      "array_len": 13
    }
  },
  "selection": {
    "top_k": 17
  },
  "template": "code"
}
