tests/snapshots/code_text_fallback_param__code_text_fallback_sample_js_default.snap
---
source: tests/code_text_fallback_param.rs
assertion_line: 80
expression: out
---
function greet(name) {
  console.log(`Hello, ${name}`);
}
  …

function main() {
  greet("world");

…
  …

  …
